--- a/TMD/TMD/Views/Admin/ResetUserPassword.cshtml
+++ b/TMD/TMD/Views/Admin/ResetUserPassword.cshtml
@@ -5,7 +5,7 @@
 }
 
 <link href="~/css/user-management.css" rel="stylesheet" />
-
+<link href="~/css/register-reset.css" rel="stylesheet" />
 <div class="container-fluid px-4 py-4 um-container">
     <div class="row justify-content-center">
         <div class="col-lg-6">
